# qcon-nyc-2023

./: .gitignore  README.md  build.sh  wasi_preview1_component_adapter.wasm  wasi_snapshot_preview1.reactor.wasm
guest/: config.yaml
guest/c/: Makefile  README.md  component.c  critter.c  critter.component.wasm  critter.h  critter.wasm  critter.wat
guest/c/control/: README.md  control.c  power.c  power.component.wasm  power.h  power.wasm  power.wat
guest/c/control/wit/: control.wit
guest/go/gopher/: README.md  go.mod  gopher.component.wasm  gopher.go  gopher.wit
guest/js/dino/: dino.js  package-lock.json  package.json
guest/rust/crates/app/: Cargo.toml
guest/rust/crates/app/src/: lib.rs
guest/rust/crates/app/wit/: world.wit
guest/rust/crates/rustacean/: Cargo.toml
guest/rust/crates/rustacean/src/: lib.rs
guest/rust/crates/rustacean/wit/: world.wit
host/: Cargo.toml
host/src/: main.rs
wit/: world.wit
