[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "macros"] }
wasmtime = "10.0.1"
wasmtime-wasi = "10.0.1"
wasmtime-wasi-http = "10.0.1"
# wasmtime = { path = "../../../bytecodealliance/wasmtime/crates/wasmtime" }
# wasmtime-wasi = { path = "../../../bytecodealliance/wasmtime/crates/wasi" }
# wasmtime-wasi-http  = { path = "../../../bytecodealliance/wasmtime/crates/wasi-http" }
